Added css to examples

--- a/examples/index.html
+++ b/examples/index.html
@@ -32,6 +32,7 @@
     src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.2/react-dom.min.js">
   </script>
 
+  <link href="lib/wiki-editor.css" rel="stylesheet" />
   <link
     href="https://fonts.googleapis.com/css?family=Ubuntu"
     rel="stylesheet"
