Added TablePlugin, based on slate-edit-table

--- a/fontello/demo.html
+++ b/fontello/demo.html
@@ -229,11 +229,11 @@ body {
 }
 @font-face {
       font-family: 'wiki-editor';
-      src: url('./font/wiki-editor.eot?98577081');
-      src: url('./font/wiki-editor.eot?98577081#iefix') format('embedded-opentype'),
-           url('./font/wiki-editor.woff?98577081') format('woff'),
-           url('./font/wiki-editor.ttf?98577081') format('truetype'),
-           url('./font/wiki-editor.svg?98577081#wiki-editor') format('svg');
+      src: url('./font/wiki-editor.eot?74104429');
+      src: url('./font/wiki-editor.eot?74104429#iefix') format('embedded-opentype'),
+           url('./font/wiki-editor.woff?74104429') format('woff'),
+           url('./font/wiki-editor.ttf?74104429') format('truetype'),
+           url('./font/wiki-editor.svg?74104429#wiki-editor') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -320,8 +320,11 @@ body {
       </div>
       <div class="row">
         <div title="Code: 0xf0cd" class="the-icons span3"><i class="demo-icon icon-underline">&#xf0cd;</i> <span class="i-name">icon-underline</span><span class="i-code">0xf0cd</span></div>
+        <div title="Code: 0xf0ce" class="the-icons span3"><i class="demo-icon icon-add-table">&#xf0ce;</i> <span class="i-name">icon-add-table</span><span class="i-code">0xf0ce</span></div>
         <div title="Code: 0xf12b" class="the-icons span3"><i class="demo-icon icon-superscript">&#xf12b;</i> <span class="i-name">icon-superscript</span><span class="i-code">0xf12b</span></div>
         <div title="Code: 0xf12c" class="the-icons span3"><i class="demo-icon icon-subscript">&#xf12c;</i> <span class="i-name">icon-subscript</span><span class="i-code">0xf12c</span></div>
+      </div>
+      <div class="row">
         <div title="Code: 0xf1dc" class="the-icons span3"><i class="demo-icon icon-heading">&#xf1dc;</i> <span class="i-name">icon-heading</span><span class="i-code">0xf1dc</span></div>
       </div>
     </div>
