--- a/fontello/demo.html
+++ b/fontello/demo.html
@@ -229,11 +229,11 @@ body {
 }
 @font-face {
       font-family: 'wiki-editor';
-      src: url('./font/wiki-editor.eot?74104429');
-      src: url('./font/wiki-editor.eot?74104429#iefix') format('embedded-opentype'),
-           url('./font/wiki-editor.woff?74104429') format('woff'),
-           url('./font/wiki-editor.ttf?74104429') format('truetype'),
-           url('./font/wiki-editor.svg?74104429#wiki-editor') format('svg');
+      src: url('./font/wiki-editor.eot?64484817');
+      src: url('./font/wiki-editor.eot?64484817#iefix') format('embedded-opentype'),
+           url('./font/wiki-editor.woff?64484817') format('woff'),
+           url('./font/wiki-editor.ttf?64484817') format('truetype'),
+           url('./font/wiki-editor.svg?64484817#wiki-editor') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -307,24 +307,32 @@ body {
         <div title="Code: 0xe803" class="the-icons span3"><i class="demo-icon icon-align-justify">&#xe803;</i> <span class="i-name">icon-align-justify</span><span class="i-code">0xe803</span></div>
       </div>
       <div class="row">
+        <div title="Code: 0xe804" class="the-icons span3"><i class="demo-icon icon-insert-column-left">&#xe804;</i> <span class="i-name">icon-insert-column-left</span><span class="i-code">0xe804</span></div>
         <div title="Code: 0xe805" class="the-icons span3"><i class="demo-icon icon-outdent">&#xe805;</i> <span class="i-name">icon-outdent</span><span class="i-code">0xe805</span></div>
         <div title="Code: 0xe806" class="the-icons span3"><i class="demo-icon icon-indent">&#xe806;</i> <span class="i-name">icon-indent</span><span class="i-code">0xe806</span></div>
         <div title="Code: 0xe807" class="the-icons span3"><i class="demo-icon icon-bold">&#xe807;</i> <span class="i-name">icon-bold</span><span class="i-code">0xe807</span></div>
-        <div title="Code: 0xe808" class="the-icons span3"><i class="demo-icon icon-italic">&#xe808;</i> <span class="i-name">icon-italic</span><span class="i-code">0xe808</span></div>
       </div>
       <div class="row">
+        <div title="Code: 0xe808" class="the-icons span3"><i class="demo-icon icon-italic">&#xe808;</i> <span class="i-name">icon-italic</span><span class="i-code">0xe808</span></div>
         <div title="Code: 0xe809" class="the-icons span3"><i class="demo-icon icon-font">&#xe809;</i> <span class="i-name">icon-font</span><span class="i-code">0xe809</span></div>
+        <div title="Code: 0xe80a" class="the-icons span3"><i class="demo-icon icon-insert-column-right">&#xe80a;</i> <span class="i-name">icon-insert-column-right</span><span class="i-code">0xe80a</span></div>
+        <div title="Code: 0xe80b" class="the-icons span3"><i class="demo-icon icon-insert-row-above">&#xe80b;</i> <span class="i-name">icon-insert-row-above</span><span class="i-code">0xe80b</span></div>
+      </div>
+      <div class="row">
+        <div title="Code: 0xe80c" class="the-icons span3"><i class="demo-icon icon-insert-row-below">&#xe80c;</i> <span class="i-name">icon-insert-row-below</span><span class="i-code">0xe80c</span></div>
+        <div title="Code: 0xe80d" class="the-icons span3"><i class="demo-icon icon-delete-column">&#xe80d;</i> <span class="i-name">icon-delete-column</span><span class="i-code">0xe80d</span></div>
+        <div title="Code: 0xe80e" class="the-icons span3"><i class="demo-icon icon-delete-row">&#xe80e;</i> <span class="i-name">icon-delete-row</span><span class="i-code">0xe80e</span></div>
         <div title="Code: 0xf0ca" class="the-icons span3"><i class="demo-icon icon-bulleted-list">&#xf0ca;</i> <span class="i-name">icon-bulleted-list</span><span class="i-code">0xf0ca</span></div>
+      </div>
+      <div class="row">
         <div title="Code: 0xf0cb" class="the-icons span3"><i class="demo-icon icon-numbered-list">&#xf0cb;</i> <span class="i-name">icon-numbered-list</span><span class="i-code">0xf0cb</span></div>
         <div title="Code: 0xf0cc" class="the-icons span3"><i class="demo-icon icon-strike">&#xf0cc;</i> <span class="i-name">icon-strike</span><span class="i-code">0xf0cc</span></div>
-      </div>
-      <div class="row">
         <div title="Code: 0xf0cd" class="the-icons span3"><i class="demo-icon icon-underline">&#xf0cd;</i> <span class="i-name">icon-underline</span><span class="i-code">0xf0cd</span></div>
         <div title="Code: 0xf0ce" class="the-icons span3"><i class="demo-icon icon-add-table">&#xf0ce;</i> <span class="i-name">icon-add-table</span><span class="i-code">0xf0ce</span></div>
-        <div title="Code: 0xf12b" class="the-icons span3"><i class="demo-icon icon-superscript">&#xf12b;</i> <span class="i-name">icon-superscript</span><span class="i-code">0xf12b</span></div>
-        <div title="Code: 0xf12c" class="the-icons span3"><i class="demo-icon icon-subscript">&#xf12c;</i> <span class="i-name">icon-subscript</span><span class="i-code">0xf12c</span></div>
       </div>
       <div class="row">
+        <div title="Code: 0xf12b" class="the-icons span3"><i class="demo-icon icon-superscript">&#xf12b;</i> <span class="i-name">icon-superscript</span><span class="i-code">0xf12b</span></div>
+        <div title="Code: 0xf12c" class="the-icons span3"><i class="demo-icon icon-subscript">&#xf12c;</i> <span class="i-name">icon-subscript</span><span class="i-code">0xf12c</span></div>
         <div title="Code: 0xf1dc" class="the-icons span3"><i class="demo-icon icon-heading">&#xf1dc;</i> <span class="i-name">icon-heading</span><span class="i-code">0xf1dc</span></div>
       </div>
     </div>
