Split hotkey for insert row above/below and moving out of table

--- a/examples/index.html
+++ b/examples/index.html
@@ -38,6 +38,15 @@
     rel="stylesheet"
   />
 
+  <style type="text/css">
+    .wiki-editor + textarea {
+      box-sizing: border-box;
+      display: block;
+      min-height: 200px;
+      width: 100%;
+    }
+  </style>
+
  </head>
  <body>
   <div id="application">
