Adding float-left and float-right icons

--- a/fontello/demo.html
+++ b/fontello/demo.html
@@ -229,11 +229,11 @@ body {
 }
 @font-face {
       font-family: 'wiki-editor';
-      src: url('./font/wiki-editor.eot?9614104');
-      src: url('./font/wiki-editor.eot?9614104#iefix') format('embedded-opentype'),
-           url('./font/wiki-editor.woff?9614104') format('woff'),
-           url('./font/wiki-editor.ttf?9614104') format('truetype'),
-           url('./font/wiki-editor.svg?9614104#wiki-editor') format('svg');
+      src: url('./font/wiki-editor.eot?52580313');
+      src: url('./font/wiki-editor.eot?52580313#iefix') format('embedded-opentype'),
+           url('./font/wiki-editor.woff?52580313') format('woff'),
+           url('./font/wiki-editor.ttf?52580313') format('truetype'),
+           url('./font/wiki-editor.svg?52580313#wiki-editor') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -325,14 +325,18 @@ body {
         <div title="Code: 0xe80f" class="the-icons span3"><i class="demo-icon icon-delete-table">&#xe80f;</i> <span class="i-name">icon-delete-table</span><span class="i-code">0xe80f</span></div>
       </div>
       <div class="row">
+        <div title="Code: 0xe811" class="the-icons span3"><i class="demo-icon icon-float-left">&#xe811;</i> <span class="i-name">icon-float-left</span><span class="i-code">0xe811</span></div>
+        <div title="Code: 0xe812" class="the-icons span3"><i class="demo-icon icon-float-right">&#xe812;</i> <span class="i-name">icon-float-right</span><span class="i-code">0xe812</span></div>
         <div title="Code: 0xf0ca" class="the-icons span3"><i class="demo-icon icon-bulleted-list">&#xf0ca;</i> <span class="i-name">icon-bulleted-list</span><span class="i-code">0xf0ca</span></div>
         <div title="Code: 0xf0cb" class="the-icons span3"><i class="demo-icon icon-numbered-list">&#xf0cb;</i> <span class="i-name">icon-numbered-list</span><span class="i-code">0xf0cb</span></div>
-        <div title="Code: 0xf0cc" class="the-icons span3"><i class="demo-icon icon-strike">&#xf0cc;</i> <span class="i-name">icon-strike</span><span class="i-code">0xf0cc</span></div>
-        <div title="Code: 0xf0cd" class="the-icons span3"><i class="demo-icon icon-underline">&#xf0cd;</i> <span class="i-name">icon-underline</span><span class="i-code">0xf0cd</span></div>
       </div>
       <div class="row">
+        <div title="Code: 0xf0cc" class="the-icons span3"><i class="demo-icon icon-strike">&#xf0cc;</i> <span class="i-name">icon-strike</span><span class="i-code">0xf0cc</span></div>
+        <div title="Code: 0xf0cd" class="the-icons span3"><i class="demo-icon icon-underline">&#xf0cd;</i> <span class="i-name">icon-underline</span><span class="i-code">0xf0cd</span></div>
         <div title="Code: 0xf0ce" class="the-icons span3"><i class="demo-icon icon-add-table">&#xf0ce;</i> <span class="i-name">icon-add-table</span><span class="i-code">0xf0ce</span></div>
         <div title="Code: 0xf12b" class="the-icons span3"><i class="demo-icon icon-superscript">&#xf12b;</i> <span class="i-name">icon-superscript</span><span class="i-code">0xf12b</span></div>
+      </div>
+      <div class="row">
         <div title="Code: 0xf12c" class="the-icons span3"><i class="demo-icon icon-subscript">&#xf12c;</i> <span class="i-name">icon-subscript</span><span class="i-code">0xf12c</span></div>
         <div title="Code: 0xf1dc" class="the-icons span3"><i class="demo-icon icon-heading">&#xf1dc;</i> <span class="i-name">icon-heading</span><span class="i-code">0xf1dc</span></div>
       </div>
